<resources>
    <string name="app_name">VeterinarioApp</string>
    <string name="title_pet">Mascotas</string>
    <string name="title_owner">Propietarios</string>
    <string name="name">Nombre</string>
    <string name="age">Edad</string>
    <string name="title_activity_new_owner">Nuevo Propietario</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_new_pet">Nueva Mascota</string>
    <string name="id">Cédula</string>
    <string name="phone">Teléfono</string>
    <string name="id_pet">Cédula mascota</string>
    <string name="kind_pet">Tipo de mascota</string>
    <string name="race_pet">Raza de mascota</string>
    <string name="title_activity_pet_detail">Mascota</string>
    <string name="title_activity_owner_detail">Propietario</string>
    <string name="title_activity_vaccine">Registro de vacunas</string>
    <string name="vaccine">Vacunas</string>
    <string name="new_vaccine">Cual?</string>
    <string name="date">Seleccionar fecha</string>
    <string name="dose">Dosis</string>
    <string name="msg_empty_fields">Debe digitar todos los campos</string>
    <string name="age_lb">Edad: </string>
    <string name="id_lb">Cédula: </string>
    <string name="race_lb">Raza: </string>
    <string name="phone_lb">Teléfono: </string>
    <string name="pets">Mascotas</string>
    <string name="name_vaccine">Nombre vacuna</string>
    <string name="dose_lb">Dosis:</string>
    <string name="date_lb">Fecha:</string>
    <string name="name_lb">Nombre:</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="erase_pet_msg_">¿Desea eliminar la mascota?</string>
    <string name="id_owner_lb">Cédula propietario:</string>

    <string-array name="kind_pet">
        <item>Perro</item>
        <item>Gato</item>
        <item>Pájaro</item>
    </string-array>

    <string-array name="dog_races">
        <item>Buldog</item>
        <item>Labrador</item>
        <item>Poodle</item>
        <item>Siberiano</item>
        <item>Pug</item>
    </string-array>

    <string-array name="cat_races">
        <item>Azul Roso</item>
        <item>Bengala</item>
        <item>Munchkin</item>
        <item>Persa</item>
        <item>Ragdoll</item>
    </string-array>

    <string-array name="bird_races">
        <item>Canario</item>
        <item>Gorrion</item>
        <item>Jilguero</item>
        <item>Petirrojo</item>
        <item>Ruiseñor</item>
    </string-array>

    <string-array name="vaccine">
        <item>Vacuna 1</item>
        <item>Vacuna 2</item>
        <item>Vacuna 3</item>
        <item>Otra Vacuna</item>
    </string-array>

</resources>
